@@ -76,7 +76,7 @@ Flow('smoothed','noisy','smooth rect1=4 rect2=4')
 Flow('diffused','noisy','impl2 rect1=10 rect2=10 tau=1')
 
 # Median filter
-Flow('median','noisy','despike2 wide1=5 wide2=5')
+Flow('median','noisy','despike2 wide1=10 wide2=10')
 
 # Bilateral filter
 
