@@ -96,6 +96,7 @@ In programs:
 * Fixed off-by-one bug in sfrickerfit
 * Avoid cropping of images by vplot2eps
 * Read the whole cube for finding contours in sfcontour3
+* Fixed shift by one in sfdespike
 
 In the build system:
 
